--- a/DemoDataGridview/DemoDataGridview/DemoDataGridview.csproj
+++ b/DemoDataGridview/DemoDataGridview/DemoDataGridview.csproj
@@ -85,6 +85,12 @@
     <Compile Include="frmProductView.Designer.cs">
       <DependentUpon>frmProductView.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmSaleView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSaleView.Designer.cs">
+      <DependentUpon>frmSaleView.cs</DependentUpon>
+    </Compile>
     <Compile Include="IOManager.cs" />
     <Compile Include="Model\ClsCategory.cs" />
     <Compile Include="Model\ClsCustomer.cs" />
@@ -114,6 +120,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmProductView.resx">
       <DependentUpon>frmProductView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSaleView.resx">
+      <DependentUpon>frmSaleView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
