update product view form

--- a/DemoDataGridview/DemoDataGridview/DemoDataGridview.csproj
+++ b/DemoDataGridview/DemoDataGridview/DemoDataGridview.csproj
@@ -116,6 +116,7 @@
     <Compile Include="POSUtil.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidSaleItem.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
